fixed paths and cdn jquery

--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,8 @@
 <title>html5 upload</title>
 <meta charset="utf-8">
 <meta name="description" content=""/>
-<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="js/js-uploader.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="js-uploader.js"></script>
 <script>
 	$(document).ready(function () {
 		var uploader = new FileUploader({});
